# croom.to

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: CNAME  README.md  _config.yml  index.html  project-readme.md  viewer.html
docs/_includes/: footer.html  header.html
docs/_layouts/: default.html
docs/assets/js/: main.js
docs/cfworkers/: .gitignore  README.md  contact-handler.js  package.json  wrangler.toml
docs/contact/: index.html
docs/docs/: index.html
docs/features/: index.html
docs/guides/: administrator-guide.md  deployment-guide.md  user-guide.md
docs/hardware/: index.html
docs/prd/: 001-management-dashboard.md  002-multi-platform-support.md  003-device-provisioning.md  004-security-compliance.md  005-touch-screen-room-ui.md  006-edge-ai-features.md  007-modern-installation.md  008-cross-platform-architecture.md
docs/pricing/: index.html
docs/roadmap/: dashboard-implementation.md  enterprise-roadmap.md  feature-index.md  upstream-contributions.md
docs/website/: CNAME
docs/website/_includes/: footer.html
docs/website/_layouts/: default.html
docs/website/pricing/: index.html
docs/why-croom/: index.html
installer/: install.sh
packaging/debian/: control
project-docs/: README.md
project-docs/roadmap/: dashboard-implementation.md
src/croom/: __init__.py
src/croom-dashboard/backend/: package.json
src/croom-dashboard/frontend/: index.html  package.json
src/croom-ui/: main.py
src/croom-ui/croom_ui/: __init__.py  app.py
src/croom-ui/qml/: main.qml
src/croom-ui/src/: __init__.py
src/croom.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/croom/ai/: __init__.py  auto_framing.py  gesture_recognition.py  privacy_mode.py  ptz_control.py  service.py  speaker_tracking.py
src/croom/audio/: __init__.py  device.py  processor.py  service.py
src/pimeet/: __init__.py
src/pimeet-ui/: main.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py
website/: _config.yml  about.html  features.html  index.html  pricing.html
website/_docs/: api.md  configuration.md  hardware.md  index.md  installation.md  management.md  platforms.md  quickstart.md  touch-screen.md
website/_includes/: footer.html  header.html
website/_layouts/: default.html  docs.html
website/why-croom/: index.html
(+242 files in other folders)
