[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pimeet"
version = "2.0.0.dev0"
description = "Enterprise video conferencing for Raspberry Pi"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "PiMeet Team", email = "pimeet@example.com"}
]
keywords = [
    "raspberry-pi",
    "video-conferencing",
    "google-meet",
    "microsoft-teams",
    "zoom",
    "conference-room",
    "enterprise"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Conferencing",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "pyyaml>=6.0",
    "playwright>=1.40.0",
    "aiohttp>=3.9.0",
    "numpy>=1.24.0",
    "opencv-python-headless>=4.8.0",
    "onnxruntime>=1.16.0",
]

[project.optional-dependencies]
ui = [
    "PySide6>=6.6.0",
]
coral = [
    "tflite-runtime>=2.14.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
pimeet = "pimeet.core.agent:main"
pimeet-ui = "pimeet_ui.main:main"

[project.urls]
Homepage = "https://github.com/your-org/pimeet-enhanced"
Documentation = "https://github.com/your-org/pimeet-enhanced/tree/main/docs"
Repository = "https://github.com/your-org/pimeet-enhanced.git"
Issues = "https://github.com/your-org/pimeet-enhanced/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pimeet*"]

[tool.setuptools.package-data]
pimeet = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
